--- a/index.html
+++ b/index.html
@@ -1,117 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Next Academy Task</title>
-    <link rel="stylesheet" href="style.css"/>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+ <html lang="en">
+   <head>
+     <title>Next Academy Task</title>
+     <link rel="stylesheet" href="style.css"/>
+      <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+ 
+   <body>
+     <!-- <div class="nav">
+       <label for="toggle">&#9776;</label>
+       <input type="checkbox" id="toggle"> -->
+ 
+     <!-- <header>
+ 
+       just a logo -->
+       <!-- <img src="Images/logo.jpg" id="logo" /> -->
+ 
+       <!-- <nav>
+         <div id= "navigation">
+           <a href="#">About Me</a>
+           <a href="#">Portfolio</a>
+           <a href="#">Contact</a>
+         </div>
+       </nav>
+     </header> -->
 
-  <body>
-    <div class="nav">
-      <label for="toggle">&#9776;</label>
-      <input type="checkbox" id="toggle">
-
-    <!-- <header>
-
-      just a logo -->
-      <!-- <img src="Images/logo.jpg" id="logo" /> -->
-
-      <nav>
-        <div id= "navigation">
-          <a href="#">About Me</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Contact</a>
-        </div>
-      </nav>
-    </header>
-    
-    <article>
-      <div class="welcome">
-        <h1 class="welcome-word">Welcome to My Site</h1>
-        <p class="create-word">Create a design for you</p>
-      </div>
-
-          <!--Tell about Yourself-->
-        <div class = "about-me-container">
-              <img class = "profile-picture" src="Images/profile.jpg" width="250" height="250"/>    
-              <div class = "about-me">
-                  <h2 class="about-me-word">About Me</h2>
-                  <p class ="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br/><br/>
-
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                   proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-
-                  </p>
-              </div>         
-        </div>
-      </article>  
-
-      <section>
-        <h2 class="Artwork">Artwork</h2>
-          <div class="Gallery" >
-            <div class="Gallery-1">
-              <img src="Images/1.jpg" width="300"/>
-            </div>
-            <div class="Gallery-2">
-              <img src="Images/2.jpg" width="300"/>
-            </div>
-            <div class="Gallery-3">
-              <img src="Images/3.jpg" width="300"/>
-            </div>
-            <div class="Gallery-3">
-              <img src="Images/3.jpg" width="300"/>
-            </div>
+      <article>
+       <div class="welcome">
+         <h1 class="welcome-word">Welcome to My Site</h1>
+         <p class="create-word">Create a design for you</p>
+       </div>
+ 
+           <!--Tell about Yourself-->
+         <div class = "about-me-container">
+               <img class = "profile-picture" src="Images/profile.jpg"/>    
+               <div class = "about-me">
+                   <h2 class="about-me-word">About Me</h2>
+                   <p class ="paragraph">My name is Muhamad Asymawi bin Ismail. I'm from Ukay Perdana, Ampang. I like playing online computer games. I was studied at UniKL BMI, Gombak. Now, I'm working as Designer at Asashi Technology Sdn. Bhd.<br/><br/>
+ 
+                   </p>
+               </div>         
           </div>
-
-        <h2 class="video-word">Video</h2>
-          <div class="video">
-            <div class="video-1">
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/RtnCn65MdN0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-            <div class="video-2">
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/rZ-KWK2SVh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-          </div>
-        </section>
-
-          <br /><br />
-
-        <!-- <div class="contact">
-          <address class="address">
-            Visit My Place: <br />
-            D-4-11, <br />
-            Sri Puteri Apartment, <br />
-            Ampang, 68000 Selangor
-          </address>
-
-          <div class="social-media">
-            <h3>Visit My Social Media</h3>
-            <div id="facebook">
-              <a href="#" class="fa fa-facebook"></a>
-            </div>
-            <div id="instagram">
-              <a href="#" class="fa fa-instagram"></a>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- <aside>
-          <h3>hahaha</h3>
-        </aside> -->
-
-        <footer id="copyright">
-          Copyright &copy; Muhamad Asymawi bin Ismail
-        </footer>
+        </article>  
   
-  </body>
-</html>
+        <section>
+         <h2 class="Artwork">Artwork</h2>
+            <div class="Gallery" >
+              <div class="Gallery-1">
+                <img src="Images/1.jpg" width="300"/>
+              </div>
+              <div class="Gallery-2">
+                <img src="Images/2.jpg" width="300"/>
+              </div>
+              <div class="Gallery-3">
+                <img src="Images/3.jpg" width="300"/>
+              </div>
+             <div class="Gallery-3">
+               <img src="Images/3.jpg" width="300"/>
+             </div>
+           </div>
+ 
+         <h2 class="video-word">Video</h2>
+           <div class="video">
+             <div class="video-1">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/RtnCn65MdN0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             </div>
+            <div class="video-2">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/rZ-KWK2SVh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             </div>
+           </div>
+         </section>
+  
+            <br /><br />
+  
+          <div class="contact">
+           <address class="address">
+             Visit My Place: <br />
+             D-4-11, <br />
+             Sri Puteri Apartment, <br />
+             Ampang, 68000 Selangor
+           </address>
+ 
+           <div class="social-media">
+             <h3>Visit My Social Media</h3>
+             <div id="facebook">
+               <a href="#" class="fa fa-facebook"></a>
+             </div>
+             <div id="instagram">
+               <a href="#" class="fa fa-instagram"></a>
+             </div>
+           </div>
+         </div>
+  
+          <!-- <aside>
+           <h3>hahaha</h3>
+         </aside> -->
+ 
+         <!-- <footer id="copyright">
+           Copyright &copy; Muhamad Asymawi bin Ismail
+         </footer> -->
+   
+   </body>
+ </html> 
