--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
             <img class = "profile-picture" src="Images/profile.jpg" width="250" height="250"/>    
             <div class = "about-me">
                 <h2 class="about-me-word">About Me</h2>
-                <p class ="paragraph">My name is Muhamad Asymawi bin Ismail. I was born in Taiping Hospital, Perak and grew up in Keramat, Kuala Lumpur. I continued my studies at UniKL British Malaysian Institute, Gombak. I am working as a Marketing Designer at a company in Wangsa Maju.<br/><br/>
-
-                I have experience in printing company for 1 year. My hobby is playing computer games. I love to travel around Malaysia. 
-
-                </p>
+                <p class ="paragraph">My name is Muhamad Asymawi bin Ismail. I was born in Taiping Hospital, Perak and grew up in Keramat, Kuala Lumpur. I was studied at UniKL British Malaysian Institute, Gombak. I am working as a Marketing Designer at a company in Wangsa Maju. I like playing computer games.<br/><br/></p>
             </div>         
       </div>  
 
