--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  
            <!--Tell about Yourself-->
          <div class = "about-me-container">
-               <img class = "profile-picture" src="Images/profile.jpg"/>    
+               <img class = "profile-picture" src="profile.jpg"/>    
                <div class = "about-me">
                   <h2 class="about-me-word">About Me</h2>
                   <p class ="paragraph">My name is Muhamad Asymawi bin Ismail. I'm from Ukay Perdana, Ampang. I was studied at UniKL BMI, Gombak. Now, I'm working as <strong>Designer</strong> at Asashi Technology Sdn. Bhd. I like to work as a team because each of us have different ability and from that, it can give a good result for any project.<br/><br/>
@@ -51,16 +51,16 @@
          <h2 class="Artwork">Artwork</h2>
             <div class="Gallery" >
               <div class="Gallery-1">
-                <img src="Images/1.jpg" width="300"/>
+                <img src="1.jpg" width="300"/>
               </div>
               <div class="Gallery-2">
-                <img src="Images/2.jpg" width="300"/>
+                <img src="2.jpg" width="300"/>
               </div>
               <div class="Gallery-3">
-                <img src="Images/3.jpg" width="300"/>
+                <img src="3.jpg" width="300"/>
               </div>
              <div class="Gallery-4">
-               <img src="Images/4.jpg" width="300"/>
+               <img src="4.jpg" width="300"/>
              </div>
            </div>
  
@@ -79,10 +79,10 @@
           <h2>Favourite Games</h2>
            <div class="my-favourite-games">
             <div class="PUBG">
-              <a href="https://playbattlegrounds.com/main.pu" target="_blank"><img class="pubg-image" src="Images/6.png"/></a>
+              <a href="https://playbattlegrounds.com/main.pu" target="_blank"><img class="pubg-image" src="6.png"/></a>
             </div>
             <div class="DOTA">
-               <a href="http://www.dota2.com/play" target="_blank"><img class="dota-image" src="Images/5.jpg"/></a>
+               <a href="http://www.dota2.com/play" target="_blank"><img class="dota-image" src="5.jpg"/></a>
             </div>
            </div>
          </section>
